# simd-benches

./: .gitignore  Cargo.toml  justfile
.github/workflows/: benchmark.yml
benches/: ascii.rs  base64.rs  utf16.rs  utf8.rs
scripts/: analyze.py  bench.sh  hack.css  hack.py  print-env.sh  render.sh  wasi-bench.sh  wikipedia_mars.py
src/: lib.rs
